src/test/ui/const-generics/defaults/mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/mismatch.rs:7:28
   |
LL |     let e: Example::<13> = ();
   |            -------------   ^^ expected struct `Example`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:10:34
   |
LL |     let e: Example2::<u32, 13> = ();
   |            -------------------   ^^ expected struct `Example2`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example2`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:13:34
   |
LL |     let e: Example3::<13, u32> = ();
   |            -------------------   ^^ expected struct `Example3`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example3`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:16:28
   |
LL |     let e: Example3::<7> = ();
   |            -------------   ^^ expected struct `Example3`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example3<7_usize>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:19:28
   |
LL |     let e: Example4::<7> = ();
   |            -------------   ^^ expected struct `Example4`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example4<7_usize>`
           found unit type `()`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
